Fixed image wrapping bug

--- a/react-app/src/components/ItemDetialsPage/ItemDetialsPage.css
+++ b/react-app/src/components/ItemDetialsPage/ItemDetialsPage.css
@@ -60,6 +60,7 @@
     height: 100px;
     border-radius: 15%;
     opacity: 70%;
+    object-fit: cover;
 }
 
 .items-details-page-images-container-main-images {
@@ -67,6 +68,7 @@
     width: 500px;
     height: 500px;
     margin: 0 10px;
+    object-fit: cover;
 }
 
 .active-tile-image {
